Test of ability to detect pmd failure